--- a/user-management-service.yaml
+++ b/user-management-service.yaml
@@ -51,3 +51,8 @@ management:
   zipkin:
     tracing:
       endpoint: ${ZIPKIN_API_ENDPOINT:http://localhost:9411/api/v2/spans}
+identity:
+  server:
+    base:
+      uri: ${IDENTITY_SERVER_BASE_URI:http://localhost:9090}
+      realm: ${IDENTITY_SERVER_REALM:realm}
