--- a/user-management-service.yaml
+++ b/user-management-service.yaml
@@ -56,3 +56,18 @@ identity:
     base:
       uri: ${IDENTITY_SERVER_BASE_URI:http://localhost:9090}
     realm: ${IDENTITY_SERVER_REALM:realm}
+user:
+  creation:
+    email:
+      validation:
+        url: ${USER_CREATION_EMAIl_VALIDATION_URI:http://localhost:8081/users/[0]/email/validation}
+        subject: CodeGuardian Email Validation
+        from: codeguardian@gmail.com
+        content: '<p>Hello,</p>
+                  <p>Thank you for registering with us!</p>
+                  <p>To complete your registration, please confirm your email address by clicking the button below:</p>
+                  <p style="text-align: center; margin: 30px 0;">
+                    <a href="%s" style="background-color: #4CAF50; color: white; padding: 12px 24px; text-decoration: none; border-radius: 5px;">Confirm Email</a>
+                  </p>
+                  <p>If you did not request this, you can safely ignore this message.</p>
+                  <p>Best regards,<br>The CodeGuardian Team</p>'
