--- a/user-management-service.yaml
+++ b/user-management-service.yaml
@@ -103,6 +103,7 @@ resilience4j:
         minimumNumberOfCalls: 3
         failureRateThreshold: 50
         waitDurationInOpenState: 10s
+        timeoutDuration: 1h
         permittedNumberOfCallsInHalfOpenState: 2
         automaticTransitionFromOpenToHalfOpenEnabled: true
         ignoreExceptions:
