--- a/user-management-service.yaml
+++ b/user-management-service.yaml
@@ -95,6 +95,11 @@ user:
                   <p>If you did not request this, you can safely ignore this message.</p>
                   <p>Best regards,<br>The CodeGuardian Team</p>'
 resilience4j:
+  timelimiter:
+    instances:
+      keycloakService:
+        timeout-duration: 1h
+        cancel-running-future: true
   circuitbreaker:
     instances:
       keycloakService:
@@ -103,7 +108,6 @@ resilience4j:
         minimumNumberOfCalls: 3
         failureRateThreshold: 50
         waitDurationInOpenState: 10s
-        timeoutDuration: 1h
         permittedNumberOfCallsInHalfOpenState: 2
         automaticTransitionFromOpenToHalfOpenEnabled: true
         ignoreExceptions:
